docs-archive/apache-airflow-providers-amazon/9.18.1/_sources/_api/airflow/providers/amazon/aws/exceptions/index.rst.txt
airflow.providers.amazon.aws.exceptions
=======================================

.. py:module:: airflow.providers.amazon.aws.exceptions


Exceptions
----------

.. autoapisummary::

   airflow.providers.amazon.aws.exceptions.EcsTaskFailToStart
   airflow.providers.amazon.aws.exceptions.EcsOperatorError
   airflow.providers.amazon.aws.exceptions.S3HookUriParseFailure


Module Contents
---------------

.. py:exception:: EcsTaskFailToStart(message)

   Bases: :py:obj:`Exception`


   Raise when ECS tasks fail to start AFTER processing the request.


   .. py:attribute:: message


   .. py:method:: __reduce__()

      Return ECSTask state and its message.



.. py:exception:: EcsOperatorError(failures, message)

   Bases: :py:obj:`Exception`


   Raise when ECS cannot handle the request.


   .. py:attribute:: failures


   .. py:attribute:: message


   .. py:method:: __reduce__()

      Return EcsOperator state and a tuple of failures list and message.



.. py:exception:: S3HookUriParseFailure

   Bases: :py:obj:`airflow.providers.common.compat.sdk.AirflowException`


   When parse_s3_url fails to parse URL, this error is thrown.


